--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,10 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+:root {
+	--cor-tema: #a03f3f;
+
+}
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -226,7 +230,7 @@ input, select, textarea {
 		transform: translate3d(0,0,0);
 	/* Set your background with this */
 
-		background: #a03f3f url("images/bg.jpg")  left;
+		background: var(--cor-tema) url("images/bg.jpg") left;
 		background-repeat: repeat-x;
 		height: 100%;
 		left: 0;
@@ -561,9 +565,10 @@ input, select, textarea {
 		}
 
 		#header p {
-			font-size: 1.25em;
+			font-size: 2em;
 			margin: 0.75em 0 0.25em 0;
 			opacity: 0.75;
+			font-weight: bold;
 		}
 
 		#header nav {
@@ -973,6 +978,7 @@ input, select, textarea {
 
 		#bg {
 			background-size: 300px auto;
+			background: var(--cor-tema) url("images/bg.jpg") bottom left;
 			width: 900px;
 		}
 
@@ -1079,3 +1085,72 @@ input, select, textarea {
 		#header nav {
 			padding: 0 1em;
 		} }
+
+
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0, 0, 0, 0.4);
+    }
+
+    .modal-content {
+      background-color: #fefefe;
+      margin: 15% auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 80%;
+      max-width: 500px;
+    }
+
+    .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: black;
+      text-decoration: none;
+      cursor: pointer;
+    }
+		.modal-content label{
+      display: block;
+      margin-bottom: 5px;
+			color: var(--cor-tema);
+			font-weight: bold;
+		}
+
+    label {
+      display: block;
+      margin-bottom: 5px;
+    }
+
+    input[type="text"],
+    textarea {
+      width: 100%;
+      padding: 8px;
+      margin-bottom: 10px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+			color: black;
+    }
+
+    button#enviarWhatsApp {
+      background-color: #4CAF50;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      cursor: pointer;
+    }
+
+		p.apresentacao {
+			font-weight: bold;
+		}
