--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -322,7 +322,7 @@ a:hover {
 	}
 }
 
-#wrapper {
+.wrapper {
 	-moz-animation: wrapper 3s forwards;
 	-webkit-animation: wrapper 3s forwards;
 	-ms-animation: wrapper 3s forwards;
@@ -659,7 +659,7 @@ a:hover {
 	}
 }
 
-#header {
+.header {
 	-moz-animation: header 1s 2.25s forwards;
 	-webkit-animation: header 1s 2.25s forwards;
 	-ms-animation: header 1s 2.25s forwards;
@@ -682,25 +682,25 @@ a:hover {
 	width: 90%;
 }
 
-#header h1 {
+.header h1 {
 	font-size: 4.35em;
 	font-weight: 900;
 	letter-spacing: -0.035em;
 	line-height: 1em;
 }
 
-#header p {
+.header p {
 	font-size: 2em;
 	margin: 0.75em 0 0.25em 0;
 	opacity: 0.75;
 	font-weight: bold;
 }
 
-#header nav {
+.header nav {
 	margin: 1.5em 0 0 0;
 }
 
-#header nav li {
+.header nav li {
 	-moz-animation: nav-icons 0.5s ease-in-out forwards;
 	-webkit-animation: nav-icons 0.5s ease-in-out forwards;
 	-ms-animation: nav-icons 0.5s ease-in-out forwards;
@@ -722,84 +722,84 @@ a:hover {
 	width: 5.35em;
 }
 
-#header nav li:nth-child(1) {
+.header nav li:nth-child(1) {
 	-moz-animation-delay: 2.5s;
 	-webkit-animation-delay: 2.5s;
 	-ms-animation-delay: 2.5s;
 	animation-delay: 2.5s;
 }
 
-#header nav li:nth-child(2) {
+.header nav li:nth-child(2) {
 	-moz-animation-delay: 2.75s;
 	-webkit-animation-delay: 2.75s;
 	-ms-animation-delay: 2.75s;
 	animation-delay: 2.75s;
 }
 
-#header nav li:nth-child(3) {
+.header nav li:nth-child(3) {
 	-moz-animation-delay: 3s;
 	-webkit-animation-delay: 3s;
 	-ms-animation-delay: 3s;
 	animation-delay: 3s;
 }
 
-#header nav li:nth-child(4) {
+.header nav li:nth-child(4) {
 	-moz-animation-delay: 3.25s;
 	-webkit-animation-delay: 3.25s;
 	-ms-animation-delay: 3.25s;
 	animation-delay: 3.25s;
 }
 
-#header nav li:nth-child(5) {
+.header nav li:nth-child(5) {
 	-moz-animation-delay: 3.5s;
 	-webkit-animation-delay: 3.5s;
 	-ms-animation-delay: 3.5s;
 	animation-delay: 3.5s;
 }
 
-#header nav li:nth-child(6) {
+.header nav li:nth-child(6) {
 	-moz-animation-delay: 3.75s;
 	-webkit-animation-delay: 3.75s;
 	-ms-animation-delay: 3.75s;
 	animation-delay: 3.75s;
 }
 
-#header nav li:nth-child(7) {
+.header nav li:nth-child(7) {
 	-moz-animation-delay: 4s;
 	-webkit-animation-delay: 4s;
 	-ms-animation-delay: 4s;
 	animation-delay: 4s;
 }
 
-#header nav li:nth-child(8) {
+.header nav li:nth-child(8) {
 	-moz-animation-delay: 4.25s;
 	-webkit-animation-delay: 4.25s;
 	-ms-animation-delay: 4.25s;
 	animation-delay: 4.25s;
 }
 
-#header nav li:nth-child(9) {
+.header nav li:nth-child(9) {
 	-moz-animation-delay: 4.5s;
 	-webkit-animation-delay: 4.5s;
 	-ms-animation-delay: 4.5s;
 	animation-delay: 4.5s;
 }
 
-#header nav li:nth-child(10) {
+.header nav li:nth-child(10) {
 	-moz-animation-delay: 4.75s;
 	-webkit-animation-delay: 4.75s;
 	-ms-animation-delay: 4.75s;
 	animation-delay: 4.75s;
 }
 
-#header nav a {
+.header nav a {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	-webkit-touch-callout: none;
 	border: 0;
 	display: inline-block;
 }
 
-#header nav a:before {
+.header nav a:before {
 	-moz-transition: all 0.2s ease-in-out;
 	-webkit-transition: all 0.2s ease-in-out;
 	-ms-transition: all 0.2s ease-in-out;
@@ -816,26 +816,26 @@ a:hover {
 	width: 2.5em;
 }
 
-#header nav a:hover {
+.header nav a:hover {
 	font-size: 1.1em;
 }
 
-#header nav a:hover:before {
+.header nav a:hover:before {
 	background-color: rgba(255, 255, 255, 0.175);
 	color: #fff;
 }
 
-#header nav a:active {
+.header nav a:active {
 	font-size: 0.95em;
 	background: none;
 }
 
-#header nav a:active:before {
+.header nav a:active:before {
 	background-color: rgba(255, 255, 255, 0.35);
 	color: #fff;
 }
 
-#header nav a span {
+.header nav a span {
 	display: none;
 }
 
@@ -1203,23 +1203,23 @@ a:hover {
 
 	/* Header */
 
-	#header h1 {
+	.header h1 {
 		font-size: 2.5em;
 	}
 
-	#header p {
+	.header p {
 		font-size: 1em;
 	}
 
-	#header nav {
+	.header nav {
 		font-size: 1em;
 	}
 
-	#header nav a:hover {
+	.header nav a:hover {
 		font-size: 1em;
 	}
 
-	#header nav a:active {
+	.header nav a:active {
 		font-size: 1em;
 	}
 }
@@ -1302,7 +1302,7 @@ a:hover {
 
 	/* Header */
 
-	#header nav {
+	.header nav {
 		padding: 0 1em;
 	}
 }
@@ -1389,7 +1389,7 @@ p.apresentacao {
 	padding-top: 60px;
 }
 
-#about .content {
+#about .header {
 	max-width: 100%;
 	margin: 0 auto;
 }
