--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1738,6 +1738,23 @@ p.apresentacao {
 	font-weight: lighter;
 }
 
+    .card-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .card-header h3 {
+      margin: 0;
+    }
+
+    .close-card {
+      background: none;
+      border: none;
+      font-size: 1.5rem;
+      cursor: pointer;
+    }
+
 /* Ajuste para telas menores */
 @media screen and (max-width: 768px) {
 
