--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -324,10 +324,10 @@ a:hover {
 }
 
 .wrapper {
-	-moz-animation: wrapper 3s forwards;
-	-webkit-animation: wrapper 3s forwards;
-	-ms-animation: wrapper 3s forwards;
-	animation: wrapper 3s forwards;
+	-moz-animation: wrapper 1.5s forwards;
+	-webkit-animation: wrapper 1.5s forwards;
+	-ms-animation: wrapper 1.5s forwards;
+	animation: wrapper 1.5s forwards;
 	min-height: 100vh;
 	position: relative;
 	left: 0;
@@ -723,75 +723,85 @@ a:hover {
 	width: 5.35em;
 }
 
+/* Header principal mais lento (1.5s) */
+.header {
+	-moz-animation: header 1.5s 0.5s forwards;
+	-webkit-animation: header 1.5s 0.5s forwards;
+	-ms-animation: header 1.5s 0.5s forwards;
+	animation: header 1.5s 0.5s forwards;
+}
+
+/* Ícones aparecem mais lentamente e com intervalos maiores */
 .header nav li:nth-child(1) {
-	-moz-animation-delay: 2.5s;
-	-webkit-animation-delay: 2.5s;
-	-ms-animation-delay: 2.5s;
-	animation-delay: 2.5s;
+	-moz-animation-delay: 1.2s;
+	-webkit-animation-delay: 1.2s;
+	-ms-animation-delay: 1.2s;
+	animation-delay: 1.2s;
 }
 
 .header nav li:nth-child(2) {
-	-moz-animation-delay: 2.75s;
-	-webkit-animation-delay: 2.75s;
-	-ms-animation-delay: 2.75s;
-	animation-delay: 2.75s;
+	-moz-animation-delay: 1.4s;
+	-webkit-animation-delay: 1.4s;
+	-ms-animation-delay: 1.4s;
+	animation-delay: 1.4s;
 }
 
 .header nav li:nth-child(3) {
+	-moz-animation-delay: 1.6s;
+	-webkit-animation-delay: 1.6s;
+	-ms-animation-delay: 1.6s;
+	animation-delay: 1.6s;
+}
+
+.header nav li:nth-child(4) {
+	-moz-animation-delay: 1.8s;
+	-webkit-animation-delay: 1.8s;
+	-ms-animation-delay: 1.8s;
+	animation-delay: 1.8s;
+}
+
+.header nav li:nth-child(5) {
+	-moz-animation-delay: 2s;
+	-webkit-animation-delay: 2s;
+	-ms-animation-delay: 2s;
+	animation-delay: 2s;
+}
+
+.header nav li:nth-child(6) {
+	-moz-animation-delay: 2.2s;
+	-webkit-animation-delay: 2.2s;
+	-ms-animation-delay: 2.2s;
+	animation-delay: 2.2s;
+}
+
+.header nav li:nth-child(7) {
+	-moz-animation-delay: 2.4s;
+	-webkit-animation-delay: 2.4s;
+	-ms-animation-delay: 2.4s;
+	animation-delay: 2.4s;
+}
+
+.header nav li:nth-child(8) {
+	-moz-animation-delay: 2.6s;
+	-webkit-animation-delay: 2.6s;
+	-ms-animation-delay: 2.6s;
+	animation-delay: 2.6s;
+}
+
+.header nav li:nth-child(9) {
+	-moz-animation-delay: 2.8s;
+	-webkit-animation-delay: 2.8s;
+	-ms-animation-delay: 2.8s;
+	animation-delay: 2.8s;
+}
+
+.header nav li:nth-child(10) {
 	-moz-animation-delay: 3s;
 	-webkit-animation-delay: 3s;
 	-ms-animation-delay: 3s;
 	animation-delay: 3s;
 }
 
-.header nav li:nth-child(4) {
-	-moz-animation-delay: 3.25s;
-	-webkit-animation-delay: 3.25s;
-	-ms-animation-delay: 3.25s;
-	animation-delay: 3.25s;
-}
-
-.header nav li:nth-child(5) {
-	-moz-animation-delay: 3.5s;
-	-webkit-animation-delay: 3.5s;
-	-ms-animation-delay: 3.5s;
-	animation-delay: 3.5s;
-}
-
-.header nav li:nth-child(6) {
-	-moz-animation-delay: 3.75s;
-	-webkit-animation-delay: 3.75s;
-	-ms-animation-delay: 3.75s;
-	animation-delay: 3.75s;
-}
-
-.header nav li:nth-child(7) {
-	-moz-animation-delay: 4s;
-	-webkit-animation-delay: 4s;
-	-ms-animation-delay: 4s;
-	animation-delay: 4s;
-}
-
-.header nav li:nth-child(8) {
-	-moz-animation-delay: 4.25s;
-	-webkit-animation-delay: 4.25s;
-	-ms-animation-delay: 4.25s;
-	animation-delay: 4.25s;
-}
-
-.header nav li:nth-child(9) {
-	-moz-animation-delay: 4.5s;
-	-webkit-animation-delay: 4.5s;
-	-ms-animation-delay: 4.5s;
-	animation-delay: 4.5s;
-}
-
-.header nav li:nth-child(10) {
-	-moz-animation-delay: 4.75s;
-	-webkit-animation-delay: 4.75s;
-	-ms-animation-delay: 4.75s;
-	animation-delay: 4.75s;
-}
 
 .header nav a {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
